--- a/wiki/Como_instalar.wiki
+++ b/wiki/Como_instalar.wiki
@@ -1,4 +1,4 @@
-O que você precisa para ter o pyMaestro rodando em seu computador?
+= O que você precisa para ter o pyMaestro rodando em seu computador? =
 
 * Passo 1: 
 
@@ -20,19 +20,32 @@ Se você está usando um sitema Linux, provavelmente tudo o mais já está insta
 Se você está utilizando um Sistema Operacional Windows, algumas bibliotecas
 para python e o ambiente GTK também precisam ser instalados. A seguir o que mais precisaria ser instalado e onde você obtém:
 
+_ Para windows: _
+
 MySQL para python: http://sourceforge.net/projects/mysql-python
+ - Sugiro o pacote MySQL-python-1.2.2.win32-py2.4.exe  
 
 GTK: http://gladewin32.sourceforge.net/modules/news/
+ - Sugiro o pacote Gtk+/Win32 Development Environment 
 
 PyGTK: http://ftp.gnome.org/pub/GNOME/binaries/win32/pygtk/2.10/
+ - Sugiro o pacote MySQL-python-1.2.2.win32-py2.4.exe  
 
 PyCairo: http://ftp.gnome.org/pub/GNOME/binaries/win32/pycairo/1.2/
+ - Sugiro o pacote pycairo-1.2.6-1.win32-py2.4.exe
 
 PyObject:http://ftp.gnome.org/pub/GNOME/binaries/win32/pygobject/2.12/
+ - Sugiro o pacote pygobject-2.12.3-1.win32-py2.4.exe
 
 LibGlade: http://sourceforge.net/projects/wingtk/
+ - Sugiro o pacote LibGlade 0.14
 
-Para evitar problemas, instale-os na ordem.
+Para evitar problemas, instale-os na ordem listada.
+
+_ Para Linux: _
+
+Como disse, quase tudo já deve estar instalado. Caso contrario, instale os mesmos pacotes, porém, obviamente, para Linux.
+
 
 * Passo 4: 
 
